--- a/Foundation/sv/achievements.release.json
+++ b/Foundation/sv/achievements.release.json
@@ -1,7 +1,5 @@
 ﻿{
 	"ACHIEVEMENTS": {
-		"ACH_PURCHASE_YOUR_FIRST_HEX_NAME@~2025-01-29 15:59:17": "Expansion",
-		"ACH_PURCHASE_YOUR_FIRST_HEX_DESC@~2025-01-29 16:19:21": "Köp ditt första territorium",
 		"ACH_OWNTERRITORY_30_NAME": "Ett län för långt",
 		"ACH_OWNTERRITORY_30_DESC": "Äg 30 territorium",
 		"ACH_OWNTERRITORY_30_CHALLENGE_NAME@~2024-12-20 00:20:41": "Feodalherre",
@@ -111,6 +109,8 @@
 		"ACH_CUMULATIVE_HOST_PILGRIM_500_NAME@~2024-12-20 00:18:16": "Hundra hörda berättelser",
 		"ACH_CUMULATIVE_HOST_PILGRIM_500_DESC@~2024-12-20 00:18:13": "Ta emot 500 grupper av pilgrimer i ditt kloster (kumulativt)",
 		"ACH_CUMULATIVE_PRODUCE_GEMS_1000_NAME@~2024-12-20 00:18:10": "Dyrbara stenar",
-		"ACH_CUMULATIVE_PRODUCE_GEMS_1000_DESC@~2024-12-20 00:18:06": "Producera 1.000 ädelstenar (kumulativt)"
+		"ACH_CUMULATIVE_PRODUCE_GEMS_1000_DESC@~2024-12-20 00:18:06": "Producera 1.000 ädelstenar (kumulativt)",
+		"ACH_PURCHASE_YOUR_FIRST_HEX_DESC": "Köp ditt första territorium",
+		"ACH_PURCHASE_YOUR_FIRST_HEX_NAME": "Expansion"
 	}
 }
