--- a/Foundation/sv/buildings.release.json
+++ b/Foundation/sv/buildings.release.json
@@ -1,6 +1,6 @@
 ﻿{
 	"SHEEP_STATUE_DEFAULT_QUOTES": {
-		"SHEEP_STATUE_DEFAULT_QUOTE_2@2025-01-14 22:58:01": "På bilden syns Mr Fluffy, den ändlösa kylans räddare, som gav byborna tillräckligt med ull för att värma dem i över 120 dagar!"
+		"SHEEP_STATUE_DEFAULT_QUOTE_2": "På bilden syns Mr Fluffy, den ändlösa kylans räddare, som gav byborna tillräckligt med ull för att värma dem i över 120 dagar!"
 	},
 	"BUILDING_MENUS": {
 		"CONSTRUCTION_STEPS@~2024-10-24 15:51:43": "Steg för konstruktion"
