--- a/Foundation/sv/rules.release.json
+++ b/Foundation/sv/rules.release.json
@@ -3,10 +3,10 @@
 		"NEW_BAILIFF_MODIFIER@~2024-12-17 01:19:58": "Ny fogdeeffekt!",
 		"NEW_INFLUENCE_MODIFIER@~2024-12-17 01:20:01": "Ny inflytelseeffekt!",
 		"HAPPINESS_VILLAGERS_OVERRIDEN_X_VALUE@~2024-08-09 17:48:50": "Din befolknings lycka är inställd på {1}.",
-		"X_REPLENISH_DURATION_Y_MORE@~2024-08-09 17:48:16": "{1} förnyelse tar {2} mer tid.",
-		"X_REPLENISH_DURATION_Y_LESS@~2024-08-09 17:48:20": "{1} förnyelse tar {2} mindre tid.",
+		"X_REPLENISH_DURATION_Y_MORE@~2024-08-09 17:48:16": "Det tar {2} mer tid att förnya {1}.",
+		"X_REPLENISH_DURATION_Y_LESS@~2024-08-09 17:48:20": "Det tar {2} mindre tid att förnya {1}.",
 		"ALL_REPLENISHABLE_RESOURCES@~2024-12-17 01:39:48": "Alla miljöresurser",
-		"YOUR_ARMY_IS_INVINCIBLE@~2024-08-09 17:48:00": "Dina kombattanter kommer inte att dö, bli skadade eller få sina vapen trasiga.",
+		"YOUR_ARMY_IS_INVINCIBLE@~2024-08-09 17:48:00": "Dina kombattanter kommer inte att dö, bli skadade eller förstöra sina vapen.",
 		"ALL_MINERAL_DEPOSITS_ARE_PROSPECTED@~2024-08-09 17:49:37": "Alla mineralfyndigheter är prospekterade.",
 		"TERRITORY_UPKEEP_INCREASED_BY_X@~2024-08-09 17:38:48": "Territoriets Upkeep ökade med {1}.",
 		"TERRITORY_UPKEEP_DECREASED_BY_X@~2024-08-09 17:38:51": "Territoriets Upkeep minskade med {1}.",
