--- a/Foundation/sv/agents.release.json
+++ b/Foundation/sv/agents.release.json
@@ -1,6 +1,5 @@
 ﻿{
 	"HAPPINESS_FACTORS": {
-		"VISIT_HAS_LACKED@2025-01-14 22:58:01": "Missade ett besök",
 		"VISIT_HAS_LACKED_DESC": "Gästen har inte kunnat besöka en viss byggnad och drabbas därför av en större nedgång i lycka. När motsvarande behov är uppfyllt kommer dess humör långsamt att förbättras med tiden.",
 		"WANDERINGMONKS_DELIVERY_HAPPINESSFACTOR_TITLE": "Rustad för resan",
 		"WANDERINGMONKS_DELIVERY_HAPPINESSFACTOR_DESC": "Du gav mat till de vandrande munkarna.",
@@ -41,7 +40,8 @@
 		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_TITLE": "Förargad seneschall",
 		"ASPIRATION_LABOR_MALUS_HAPPINESSFACTOR_DESC": "Du gjorde seneschallen upprörd.",
 		"BUILDING_KNIGHT_STATUE_HAPPINESSFACTOR_TITLE@~2025-01-20 23:59:40": "Hjältarnas stolthet",
-		"BUILDING_KNIGHT_STATUE_HAPPINESSFACTOR_DESC@2025-01-27 18:59:14": "Dina kombattanter är mycket stolta över att tjäna sitt rike! Alla kombattanter får en lyckobonus så länge Hjältarnas domstol står kvar."
+		"BUILDING_KNIGHT_STATUE_HAPPINESSFACTOR_DESC@2025-01-27 18:59:14": "Dina kombattanter är mycket stolta över att tjäna sitt rike! Alla kombattanter får en lyckobonus så länge Hjältarnas domstol står kvar.",
+		"VISIT_HAS_LACKED": "Missade ett besök"
 	},
 	"NEEDS": {
 		"COULD_NOT_VISIT_X": "Kunde inte besöka {1}!",
